# RichieDrop

./: .gitignore  README.md  build-all.bat  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: android-only.yml  build-android.yml  release.yml  tauri-build.yml
android/: .gitignore  README.md  app.json  babel.config.js  eas.json  gradle.properties  index.js  package-lock.json  package.json  shim.js  tailwind.config.js  tsconfig.json
android/app/: MainContent.tsx  MainContent.tsx.bak  _layout.tsx  index.tsx
android/assets/: assets.json
android/src/components/: DeviceCard.tsx  ErrorBoundary.tsx  FilePanel.tsx  Header.tsx  HistoryModal.tsx  RadarView.tsx  SettingsModal.tsx  SimpleErrorBoundary.tsx  TransferModal.tsx  index.ts
android/src/services/: discovery.ts  index.ts  transfer.ts
android/src/types/: zeroconf.d.ts
scripts/: fix-kotlin.cjs  fix-kotlin.js
src/: App.backup.tsx  App.css  App.old.tsx  App.tsx  discovery.ts  transfer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: discovery.rs  lib.rs  main.rs
