[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.8.7"
mdns-sd = "0.17.1"
local-ip-address = "0.6.8"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
chrono = "0.4.42"
tokio-util = { version = "0.7.17", features = ["io"] }
reqwest = { version = "0.12.26", default-features = false, features = ["stream", "rustls-tls", "json"] }
futures-util = "0.3.31"
tauri-plugin-dialog = "2.4.2"
urlencoding = "2.1"

